Vertical overflow bug fixed

--- a/sites/all/themes/fj16/sass/_front-page.scss
+++ b/sites/all/themes/fj16/sass/_front-page.scss
@@ -1,5 +1,7 @@
 body.front {
 
+	overflow-x: hidden;
+
 	#header {
 		min-height: 100vh;
 		height: auto;
